// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactFormAutoEmbedPublishSection /> Contact Form - connected to a non-shopify store should render correct section 1`] = `
<div
  class="card disabled"
  data-testid="contact-form-auto-embed-card"
  id="contact-form-auto-embed-card"
>
  <div>
    <h3
      class="title"
    >
      Automatically embed on your website
      <div
        class="ui-badge-badge-0cf8 badge ui-badge-uppercase-0cf8"
        data-color="grey"
        data-corner="round"
        data-name="badge"
        data-type="light"
      >
        RECOMMENDED
      </div>
    </h3>
    <div>
      Gorgias will automatically embed the contact form on a new or existing page on your website. This method is code-free.
    </div>
  </div>
  <button
    aria-disabled="true"
    class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
    data-disabled="true"
    data-name="button"
    data-rac=""
    data-react-aria-pressable="true"
    data-testid="contact-form-auto-embed-card__embed-button"
    disabled=""
    id="react-aria-:r4:"
    type="button"
  >
    <div
      class="ui-button-surface-a432"
    >
      <span
        class="ui-button-content-a432"
      >
        <span
          class="typography-bold-md ui-text-text-d239"
          data-name="text"
          style="text-align: left; text-wrap: nowrap;"
        >
          <strong>
            Embed Form
          </strong>
        </span>
      </span>
    </div>
  </button>
</div>
`;

exports[`<ContactFormAutoEmbedPublishSection /> Contact Form - connected to a shopify store when update permissions not needed should render correct section 1`] = `
<div
  class="card"
  data-testid="contact-form-auto-embed-card"
  id="contact-form-auto-embed-card"
>
  <div>
    <h3
      class="title"
    >
      Automatically embed on your website
      <div
        class="ui-badge-badge-0cf8 badge ui-badge-uppercase-0cf8"
        data-color="green"
        data-corner="round"
        data-name="badge"
        data-type="light-success"
      >
        RECOMMENDED
      </div>
    </h3>
    <div>
      Gorgias will automatically embed the contact form on a new or existing page on your website. This method is code-free.
    </div>
  </div>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
    data-name="button"
    data-rac=""
    data-react-aria-pressable="true"
    data-testid="contact-form-auto-embed-card__embed-button"
    id="react-aria-:r8:"
    tabindex="0"
    type="button"
  >
    <div
      class="ui-button-surface-a432"
    >
      <span
        class="ui-button-content-a432"
      >
        <span
          class="typography-bold-md ui-text-text-d239"
          data-name="text"
          style="text-align: left; text-wrap: nowrap;"
        >
          <strong>
            Embed Form
          </strong>
        </span>
      </span>
    </div>
  </button>
</div>
`;

exports[`<ContactFormAutoEmbedPublishSection /> Contact Form - connected to a shopify store when update permissions not needed should render correct section when store has embedments already 1`] = `
<div
  class="card clickable"
  data-testid="contact-form-auto-embed-card"
  id="contact-form-auto-embed-card"
>
  <i
    class="material-icons text-success"
    style="font-size: 24px;"
  >
    check_circle
  </i>
  <div>
    <h3
      class="title"
    >
      Automatically embed on your website
    </h3>
    <div>
      Gorgias will automatically embed the contact form on a new or existing page on your website. This method is code-free.
    </div>
  </div>
  <i
    class="material-icons"
  >
    keyboard_arrow_right
  </i>
</div>
`;

exports[`<ContactFormAutoEmbedPublishSection /> Contact Form - not connected to any stores should render correct section 1`] = `
<div
  class="card disabled"
  data-testid="contact-form-auto-embed-card"
  id="contact-form-auto-embed-card"
>
  <div>
    <h3
      class="title"
    >
      Automatically embed on your website
      <div
        class="ui-badge-badge-0cf8 badge ui-badge-uppercase-0cf8"
        data-color="grey"
        data-corner="round"
        data-name="badge"
        data-type="light"
      >
        RECOMMENDED
      </div>
    </h3>
    <div>
      Gorgias will automatically embed the contact form on a new or existing page on your website. This method is code-free.
    </div>
  </div>
  <button
    aria-disabled="true"
    class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
    data-disabled="true"
    data-name="button"
    data-rac=""
    data-react-aria-pressable="true"
    data-testid="contact-form-auto-embed-card__embed-button"
    disabled=""
    id="react-aria-:r0:"
    type="button"
  >
    <div
      class="ui-button-surface-a432"
    >
      <span
        class="ui-button-content-a432"
      >
        <span
          class="typography-bold-md ui-text-text-d239"
          data-name="text"
          style="text-align: left; text-wrap: nowrap;"
        >
          <strong>
            Embed Form
          </strong>
        </span>
      </span>
    </div>
  </button>
</div>
`;
